sw: tdf#91131 when renaming a SwNumRule, also ...

... update the DocumentListsManager::maLists because without that all
list styles created in the UI will have GetDefaultListStyleName() ==
"Untitled1" and then deleting one of them deletes all these entries from
maList, which makes the DocumentListsManager unhappy.

Change-Id: Ic40e561fc540881ab29566a3f5ecdc8a180c97ef