sw/inc/list.hxx
@@ -39,6 +39,7 @@ class SwList
         const OUString GetListId() const;
 
         const OUString GetDefaultListStyleName() const;
+        void SetDefaultListStyleName(OUString const&);
 
         void InsertListItem( SwNodeNum& rNodeNum,
                              const int nLevel );
